--- a/index.html
+++ b/index.html
@@ -537,44 +537,72 @@
             <div class="rf-left-cont">
               <h5>join the conversation</h5>
               <div class="rf-social">
-                <ul>
-                  <li><a href="#"><img src="images/eps/facebook-logo.svg" alt="facebook" /></a></li>
-                  <li><a href="#">facebook</a></li>
-                </ul>
+                <div class="rf-social-image">
+                  <img src="images/eps/facebook-logo.svg" alt="facebook" />
+                </div><!-- /.rf-social-image -->
+                <a href="#">facebook</a>
               </div><!-- /.rf-social -->
               <div class="rf-social">
-                <ul>
-                  <li><a href="#"><img src="images/eps/google-plus.svg" alt="google-plus" /></a></li>
-                  <li><a href="#">google-plus</a></li>
-                </ul>
+                <div class="rf-social-image">
+                  <img src="images/eps/google-plus.svg" alt="google-plus" />
+                </div><!-- /.rf-social-image -->
+                <a href="#">google-plus</a>
               </div><!-- /.rf-social -->
               <div class="rf-social">
-                <ul>
-                  <li><a href="#"><img src="images/eps/instagram-logo.svg" alt="instagram" /></a></li>
-                  <li><a href="#">instagram</a></li>
-                </ul>
+                <div class="rf-social-image">
+                  <img src="images/eps/instagram-logo.svg" alt="instagram" />
+                </div><!-- /.rf-social-image -->
+                <a href="#">instagram</a>
               </div><!-- /.rf-social -->
               <div class="rf-social">
-                <ul>
-                  <li><a href="#"><img src="images/eps/linkedin-logo.svg" alt="linkedin" /></a></li>
-                  <li><a href="#">linkedin</a></li>
-                </ul>
+                <div class="rf-social-image">
+                <img src="images/eps/linkedin-logo.svg" alt="linkedin" />
+                </div><!-- /.rf-social-image -->
+                <a href="#">linkedin</a>
               </div><!-- /.rf-social -->
               <div class="rf-social">
-                <ul>
-                  <li><a href="#"><img src="images/eps/twitter-logo-silhouette.svg" alt="twitter" /></a></li>
-                  <li><a href="#">twitter</a></li>
-                </ul>
+                <div class="rf-social-image">
+                <img src="images/eps/twitter-logo-silhouette.svg" alt="twitter" />
+                </div><!-- /.rf-social-image -->
+                <a href="#">twitter</a>
               </div><!-- /.rf-social -->
             </div><!-- /.rf-left-cont -->
           </div><!-- /.rf-left -->
           <div class="rf-right col-lg-9 col-md-9">
-
+            <div class="row nomargin">
+              <div class="rfr-block col-lg-4 col-md-4">
+                <div class="rfr-block-cont">
+                  <h6>downloads</h6>
+                  <p>brouchre</p>
+                  <p>software</p>
+                  <p>apps</p>
+                </div><!-- /.rfr-block-cont -->
+              </div><!-- /.rfr-block -->
+              <div class="rfr-block col-lg-4 col-md-4">
+                <div class="rfr-block-cont">
+                  <h6>follow us</h6>
+                  <p>news</p>
+                  <p>events</p>
+                  <p>keep me informed</p>
+                </div><!-- /.rfr-block-cont -->
+              </div><!-- /.rfr-block -->
+              <div class="rfr-block col-lg-4 col-md-4">
+                <div class="rfr-block-cont">
+                  <h6>quick links</h6>
+                  <p>home</p>
+                  <p>about company</p>
+                  <p>infrastructre</p>
+                  <p>testimonials</p>
+                </div><!-- /.rfr-block-cont -->
+              </div><!-- /.rfr-block -->
+            </div><!-- /.row -->
           </div><!-- /.rf-right -->
         </div><!-- /.row -->
       </div><!-- /.container-fluid -->
     </div><!-- /.reckons-footer -->
 
+    <div class="footer-border">
+    </div><!-- /.footer-border -->
 
 
 
